# coding-AIviewer

./: .gitignore  .reviewer.yml  LICENSE  README.md  pyproject.toml
.github/actions/ai-review/: action.yml
.github/workflows/: pr-review.yml
app/: main.py
src/ai_reviewer/: __init__.py  __main__.py  cli.py  config.py  models.py
src/ai_reviewer/analysis/: categorizer.py  engine.py  prompts.py
src/ai_reviewer/github/: client.py  comment_sync.py  diff_parser.py
src/ai_reviewer/llm/: anthropic.py
tests/: fixtures.py  test_categorizer.py  test_comment_sync.py  test_diff_parser.py  test_engine.py
