[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-reviewer"
version = "0.1.0"
description = "AI-powered code reviewer for GitHub Pull Requests"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.115.0", "uvicorn>=0.32.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "ruff>=0.8.0", "respx>=0.21.0"]

[project.scripts]
ai-reviewer = "ai_reviewer.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_reviewer"]

[tool.hatch.build.targets.sdist]
include = ["src/ai_reviewer", "app", "README.md", ".reviewer.yml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
